api 수정
- api 별 포맷 수정
- 성별 추가
